--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,8 @@
     <string name="confirm">Confirm</string>
     <string name="de_donde_eres">"\"¿De dónde eres?\""</string>
     <string name="give_an_answer_to_tony">Give an answer to Tony</string>
-    <string name="yo_soy_de_canada"><u>  Yo soy de Canada  </u></string>
+    <string name="yo_soy_de_canada_underline"><u>  Yo soy de Canada  </u></string>
+    <string name="yo_soy_de_canada">\"Yo soy de Canada\"</string>
     <string name="example_answers"><b>Example answers:</b></string>
     <string name="example_answer_1">Yo soy de Canada. ¿Y tu?</string>
     <string name="example_answer_2">No quiero decírtelo. Tienes que decírmelo</string>
@@ -25,4 +26,8 @@
     <string name="buildings_label_desc">A label indicating that this is the buildings market</string>
     <string name="crops_label_desc">A label indicating this is the crops market.</string>
     <string name="crops">Crops</string>
+    <string name="congratulation">Congratulation!</string>
+    <string name="got_it">Got it</string>
+    <string name="tony"><b>Tony:</b></string>
+    <string name="me"><b>Me:</b></string>
 </resources>
