--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="x">X</string>
     <string name="coin_icon_dsc">Coin icon</string>
     <string name="minus">-</string>
+    <string name="sell_sign_dsc">A sign indicating this is the place to sell your produce.</string>
+    <string name="sell">Sell</string>
 </resources>
